alignment bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -569,5 +569,7 @@ img{
     .home__img {
         width: 400px;
         right: 24%;
+        padding-right: 20px;
     }
 }
+
